--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 	<title>Career Builder - Candidate Process</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">	
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="_/css/bootstrapCarMod.min.css">
-	<link rel="stylesheet" type="text/css" href="_/css/style.css">
-	<script src="_/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="./_/css/bootstrapCarMod.min.css">
+	<link rel="stylesheet" type="text/css" href="./_/css/style.css">
+	<script src="./_/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
 
 </head>
 <body id="home">
 	<div id="loader-wrapper">
-		<img src="_/img/logo.svg" />
+		<img src="./_/img/logo.svg" />
 	    <div id="loader">
 		    <span></span>
 		    <span></span>
@@ -51,7 +51,7 @@
 			data-anchor-target="#slide1"
 			data-start="top: 60%; opacity:1;"
 		    data-top-bottom="top: 40%; opacity:0;">
-			<img src="_/img/bg1Copy.png"/>
+			<img src="./_/img/bg1Copy.png"/>
 		</div>
 	</section>
 
@@ -316,20 +316,20 @@
 	      <div id="ci2p" class="carousel slide" data-ride="carousel" >
 	       <div id="ci2" class="carousel-inner">
 	        <div class="item active">
-	    	<!--<img src="_/img/bg3_1.jpg"/> -->  
+	    	<!--<img src="./_/img/bg3_1.jpg"/> -->
 		
 	        This phase consists of a candidate's self-evaluation and evaluation of the market. During this phase, candidates will update their resumes; search for jobs on major search engines including Google, Bing, Yahoo; network with colleagues, family and friends; and visit job boards to assess the market.
 	        </div>
 	        <div class="item">
-	        <!-- <img src="_/img/bg3_2.jpg"/>    -->
+	        <!-- <img src="./_/img/bg3_2.jpg"/>    -->
 	         During this phase, the job search moves from solitary practice to an interactive social experience. Candidates tap into their social networks to get a more transparent look at the companies they are considering. At this point candidates will visit companies' career sites; network with colleagues, family and friends; and check out companies' social media presence.
 	        </div>
 	        <div class="item">
-	        	<!--<img src="_/img/bg3_3.jpg"/> -->  
+	        	<!--<img src="./_/img/bg3_3.jpg"/> -->
 	          In this phase, candidates are actively applying to jobs. During this phase, candidates will conduct in-depth research on your organization and form opinions based on the application experience, which will influence their decision to apply in the future or recommend this company to others. 
 	        </div>
 	        <div class="item">
-	        	<!--<img src="_/img/bg3_4.jpg"/> -->  
+	        	<!--<img src="./_/img/bg3_4.jpg"/> -->
 	          In this last phase, candidates are interacting with employers, interviewing and considering job offers. This is where your earlier employment brand efforts pay off. 
 	        </div>
 	      </div>
@@ -446,7 +446,7 @@
 			<div id="results" class="col3">
 				<h3>Results</h3>
 				<h4>
-					<img src="_/img/icon-orientation.png"/>
+					<img src="./_/img/icon-orientation.png"/>
 					<span class="color0">
 						Phase 1: Orientation
 					</span>
@@ -460,7 +460,7 @@
 					</span>
 				</div>
 				<h4>
-					<img src="_/img/icon-strategy.png"/>
+					<img src="./_/img/icon-strategy.png"/>
 					<span class="color1">
 						Phase 2: Consideration
 					</span> 
@@ -474,7 +474,7 @@
 					</span>
 				</div>
 				<h4>
-					<img src="_/img/icon-seeking.png"/>
+					<img src="./_/img/icon-seeking.png"/>
 					<span class="color2">
 						Phase 3: Action
 					</span> 
@@ -485,7 +485,7 @@
 					</span>
 				</div>
 				<h4>
-					<img src="_/img/icon-engagement.png"/>
+					<img src="./_/img/icon-engagement.png"/>
 					<span class="color3">
 						Phase 4: Engagement
 					</span> 
@@ -703,7 +703,7 @@
 			data-anchor-target="#diduknow-1-alt"
 			data-bottom-top="top:-50%;"  
 			data-center="top:150%;" 
-		src="_/img/dyk-icon.png" alt="">
+		src="./_/img/dyk-icon.png" alt="">
 	</div>
 	</div>
 	
@@ -874,7 +874,7 @@
 			data-anchor-target="#diduknow-2-alt"
 			data-bottom-top="top:-50%;"  
 			data-center="top:150%;" 
-			src="_/img/dyk-icon.png" alt="">
+			src="./_/img/dyk-icon.png" alt="">
 	</div>
 
 	<article id="message5a" 
@@ -1269,7 +1269,7 @@
 			data-anchor-target="#diduknow-3-alt"
 			data-bottom-top="top:-50%;"  
 			data-center="top:150%;" 
-		src="_/img/dyk-icon.png" alt="">
+		src="./_/img/dyk-icon.png" alt="">
 	</div>
 
 
@@ -1503,19 +1503,19 @@
 
 
 	 <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
-    <script src="_/js/vendor/jquery-1.11.0.js"></script>
+    <script src="./_/js/vendor/jquery-1.11.0.js"></script>
      <script>//window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-	 <script src="_/js/imagesloaded.pkgd.js"></script>
-     <script src="_/js/enquire.min.js"></script>
-     <script src="_/js/skrollr.min.js"></script>
+	 <script src="./_/js/imagesloaded.pkgd.js"></script>
+     <script src="./_/js/enquire.min.js"></script>
+     <script src="./_/js/skrollr.min.js"></script>
 
        
-	 <!--script src="_/js/skrollr.menu.min.js"></script -->
-     <script src="_/js/plugins.js"></script>
+	 <!--script src="./_/js/skrollr.menu.min.js"></script -->
+     <script src="./_/js/plugins.js"></script>
 	
 
-	<script type="text/javascript" src="_/js/bootstrapCarMod.min.js"></script>
-	<script type="text/javascript" src="_/js/script.js"></script>
+	<script type="text/javascript" src="./_/js/bootstrapCarMod.min.js"></script>
+	<script type="text/javascript" src="./_/js/script.js"></script>
 <!--	f-->
 
 
