--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>Career Builder - Candidate Process</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">	
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./_/css/bootstrapCarMod.min.css">
-	<link rel="stylesheet" type="text/css" href="./_/css/style.css">
+	<link rel="stylesheet" type="text/css" href="https://artnos.github.io/cbSkollr-master/_/css/bootstrapCarMod.min.css">
+	<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/css/style.css">
 	<script src="./_/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
 
