--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title>Career Builder - Candidate Process</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">	
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/css/bootstrapCarMod.min.css">
-	<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/css/style.css">
-	<script src="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/bootstrapCarMod.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
 
 </head>
@@ -1700,19 +1700,19 @@
 
 
 	 <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
-    <script src="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/js/vendor/jquery-1.11.0.js"></script>
+    <script src="js/vendor/jquery-1.11.0.js"></script>
      <script>//window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-	 <script src="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/js/imagesloaded.pkgd.js"></script>
-     <script src="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/js/enquire.min.js"></script>
-     <script src="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/js/skrollr.min.js"></script>
+	 <script src="js/imagesloaded.pkgd.js"></script>
+     <script src="js/enquire.min.js"></script>
+     <script src="js/skrollr.min.js"></script>
 
        
 	 <!--script src="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/js/skrollr.menu.min.js"></script -->
-     <script src="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/js/plugins.js"></script>
+     <script src="js/plugins.js"></script>
 	
 
-	<script type="text/javascript" src="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/js/bootstrapCarMod.min.js"></script>
-	<script type="text/javascript" src="https://raw.githubusercontent.com/artnos/cbSkollr-master/main/_/js/script.js"></script>
+	<script type="text/javascript" src="js/bootstrapCarMod.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 <!--	f-->
 
 
