--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Career Builder - Candidate Process</title>
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">	
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Sanchez&display=swap" rel="stylesheet">
+
+
 	<link rel="stylesheet" type="text/css" href="css/bootstrapCarMod.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -905,7 +909,40 @@
 				data-90p-top="transform: translateY(0px); opacity: 1"
 				data-20p-top="transform: translateY(0px); opacity: 1"
 				data-top-bottom="transform: translateY(-20px); opacity:1">
-				<?php include '_/php/icon4_pair.php'; ?></em>When a position opens up:</h4>
+					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="81px" height="81px" viewBox="0 0 81 81" enable-background="new 0 0 81 81" xml:space="preserve">
+  				<circle fill="#2D98BA" cx="40" cy="40" r="38.5"
+
+						style="transform-origin: center center;"
+						data-bottom-top="transform: scale(.2) "
+						data-80p-top="transform: scale(1)"/>
+						<circle fill="#5DBEEC" cx="40" cy="40" r="26.654"
+
+								style="transform-origin: center center;"
+								data-bottom-top="transform: scale(.2) "
+								data-80p-top="transform: scale(1)"/>
+
+
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#2CADDA" d="M67.481,39.767l-8.932-8.933,c-0.965-2.034-3.034-3.453-5.377-3.415c-3.22,0.051-5.775,2.638-5.832,5.858l-4.433-4.433c-0.492-0.683-1.087-1.304-1.813-1.813,c-0.259,0.353-0.521,0.71-0.778,1.059c1.892,1.653,2.829,3.862,2.702,6.074l-3.754-3.754c-0.305,0.421-0.547,0.757-0.643,0.889,c1.447,1.317,1.371,2.929,0.713,4.057l-2.185-2.185l-0.008,0.022c-0.112-0.085-0.237-0.157-0.391-0.197c0,0.347,0,0.677,0,1,l-4.249-4.249L32.5,29.75c-1.086-1.431-2.79-2.354-4.689-2.331c-3.272,0.042-5.867,2.684-5.869,5.979,c0,1.861,0.847,3.507,2.179,4.583l2.79,2.79c-1.448,0.11-2.901,0.444-4.351,0.997c-4.254,1.62-5.472,4.665-4.804,9.39l-0.133,0.093,l0.169,0.169c0.004,0.028,0.007,0.054,0.011,0.082c0.023,0,0.047,0,0.071,0l14.862,14.862c2.458,0.736,5.062,1.138,7.761,1.138,c14.91,0,27.002-12.089,27.002-27C67.5,40.254,67.488,40.011,67.481,39.767z"/>
+
+						<path opacity="0.6" fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M38.073,51.5c-6.877,0-13.576,0-20.269,0,c-0.779-4.924,0.399-8.074,4.757-9.733c3.938-1.5,7.908-1.423,11.708,0.527c2.572,1.319,3.871,3.488,3.807,6.42,C38.058,49.606,38.073,50.494,38.073,51.5z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M63.459,51.498c-6.89,0-13.587,0-20.277,0,c-0.707-4.783,0.193-8.24,5.425-9.979c3.383-1.125,6.798-1.018,10.124,0.309c3.171,1.265,4.71,3.598,4.729,7.021,C63.463,49.694,63.459,50.541,63.459,51.498z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M40.821,40.755c-0.246-0.367-0.495-0.736-0.738-1.099,c4.014-3.362,3.799-8.452,0.234-11.567c0.256-0.349,0.519-0.706,0.778-1.059C45.742,30.292,45.604,37.802,40.821,40.755z"/>
+						<path opacity="0.7" fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M39.266,30.41c2.311,1.995,2.241,5.07-0.126,6.773,c-0.249-0.322-0.5-0.646-0.663-0.856c1.281-0.938,2.098-3.252,0.146-5.028C38.718,31.167,38.961,30.831,39.266,30.41z"/>
+						<path opacity="0.4" fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M36.752,34.899c0-0.614,0-1.228,0-1.903,C37.737,33.249,37.893,34.61,36.752,34.899z"/>
+						<path opacity="0.6" fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M27.812,27.419,c-3.272,0.042-5.867,2.684-5.869,5.979c-0.001,3.283,2.634,5.902,5.927,5.889c3.293-0.013,5.869-2.631,5.854-5.947,C33.709,30.056,31.035,27.378,27.812,27.419z M30.755,33.353c-0.437,0-0.792-0.355-0.792-0.795c0-0.438,0.355-0.793,0.792-0.793,c0.438,0,0.793,0.355,0.793,0.793C31.548,32.997,31.193,33.353,30.755,33.353z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M53.173,27.419c-3.268,0.052-5.857,2.714-5.838,6.001,c0.019,3.301,2.64,5.89,5.941,5.866c3.28-0.024,5.877-2.673,5.851-5.969C59.099,30.053,56.388,27.367,53.173,27.419z,M50.293,33.353c-0.438,0-0.793-0.355-0.793-0.795c0-0.438,0.354-0.793,0.793-0.793c0.437,0,0.792,0.355,0.792,0.793,C51.085,32.997,50.729,33.353,50.293,33.353z"/>
+
+
+						<path fill="none" stroke="#FFFFFF" stroke-width="2.9615" stroke-miterlimit="10" d="M78.5,40c0,21.264-17.236,38.5-38.5,38.5C18.737,78.5,1.5,61.264,1.5,40C1.5,18.737,18.737,1.5,40,1.5C61.264,1.5,78.5,18.737,78.5,40z"
+
+							  stroke-dasharray="250"
+							  stroke-dashoffset="250"
+							  data-bottom-top="@stroke-dashoffset[sqrt]: 240; opacity: 0"
+							  data-80p-top="@stroke-dashoffset[sqrt]: 0; opacity: 1"/>
+</svg>
+
+
+				</em>When a position opens up:</h4>
 				<p>
 					72% of employers say they first look at interal resources - including ATS, talent community/network, referrals — before posting a job.
 				</p>
@@ -928,7 +965,49 @@
 					data-90p-top="transform: translateY(0px); opacity: 1"
 					data-20p-top="transform: translateY(0px); opacity: 1"
 					data-top-bottom="transform: translateY(-20px); opacity:1">
-					<?php include '_/php/icon5_watch.php'; ?></em>
+
+					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="81px" height="81px" viewBox="0 0 81 81" enable-background="new 0 0 81 81" xml:space="preserve">
+
+	 <circle fill="#2D98BA" cx="40" cy="40" r="38.5"
+
+			 style="transform-origin: center center;"
+			 data-bottom-top="transform: scale(.2) "
+			 data-80p-top="transform: scale(1)"/>
+						<circle fill="#5DBEEC" cx="40" cy="40" r="26.654"
+
+								style="transform-origin: center center;"
+								data-bottom-top="transform: scale(.2) "
+								data-80p-top="transform: scale(1)"/>
+
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#2CADDA" d="M67.48,41.272L44.018,17.809l-6.943,5.801l2.587,2.587,l-3.328,0.387l-4.67,1.863l-1.51-1.718l-3.416,3.128l2.083,2.083l-4.404,7.977l3.934,15.631l11.947,11.947,c0.067,0,0.133,0.005,0.201,0.005C55.149,67.5,67.07,55.825,67.48,41.272z"/>
+
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M42.967,17.525c1.129,0,1.734,0.697,1.76,1.842,c0.024,1.146,0.015,1.468,0.033,2.239c0.073,2.282-0.238,2.572-2.487,2.9c-0.226,0.033-0.388,0.289-0.236,0.471,c0.194,0.236,1.065,0.323,1.304,0.354c4.997,0.654,8.845,3.22,11.804,7.156c6.704,9.116,3.645,20.356-5.279,25.57,c-2.467,1.441-5.556,2.496-8.775,2.513c-4.06,0.023-8.308-1.433-11.557-3.949c-6.242-5.194-7.21-11.183-6.384-16.902,c0.571-3.951,2.485-6.493,4.958-9.196c0.205-0.224,0.409-0.479,0.599-0.674c0.189-0.194-0.08-0.718-0.619-0.338,c-0.182,0.127-0.69,0.729-1.205,0.396c-0.832-0.763-1.766-1.624-2.395-2.388c-0.16-0.223-0.418-0.58,0.268-1.348,c0.339-0.38,0.834-0.889,1.286-1.289c0.462-0.409,1.176-1.038,1.641-0.632c0.841,0.732,1.675,1.583,2.472,2.479,c0.262,0.296,0.074,0.803-0.27,1.203c-0.125,0.196-0.239,0.403-0.045,0.607c0.194,0.204,0.495-0.026,0.678-0.157,c1.983-1.419,4.218-2.35,6.603-2.839c0.597-0.123,1.209-0.165,1.803-0.301c0.182-0.042,0.48-0.193,0.48-0.413,c0-0.22-0.322-0.342-0.508-0.377c-1.755-0.334-2.109-0.733-2.113-2.469c-0.001-0.787-0.011-1.576,0.003-2.363,c0.026-1.431,0.678-2.069,2.133-2.099C39.314,17.512,42.247,17.525,42.967,17.525z M29.691,52.983l-0.031-0.031,c3.393,3.313,7.278,5.108,11.963,4.844c1.014-0.07,2.529-0.324,3.424-0.569c7.366-2.014,12.202-9.899,10.583-17.402,c-0.608-2.821-1.83-5.385-3.856-7.293L51.7,32.458c-0.234-0.254-0.442-0.455-0.7-0.691c-3.889-3.565-8.485-4.649-13.561-3.58,c-4.758,1.003-8.093,3.941-10.286,8.209c-0.138,0.266-0.721,1.769-0.843,2.256C24.961,43.999,25.821,48.851,29.691,52.983z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M52.138,35.656c-0.148,0.338-0.199,0.814-0.459,0.993,c-2.678,1.842-5.383,3.645-8.093,5.438c-0.524,0.347-0.89,0.689-0.988,1.389c-0.139,0.95-0.971,1.368-1.918,1.293,c-0.471-0.036-0.983,0.087-1.444,0.273c-0.338,0.138-0.734,0.017-1.104,0.02c0.136-0.316,0.184-0.769,0.423-0.921,c0.53-0.338,0.783-0.701,0.85-1.351c0.057-0.567,0.369-0.965,0.813-1.179c-0.017-1.655-0.073-7.825,0.004-8.561,c0.089-0.85,0.892-1.4,1.041,0.05c0.124,1.19,0.111,6.482,0.102,8.346c0.038,0.005,0.076,0.008,0.114,0.015,c0.423,0.068,0.962-0.011,1.321-0.23c1.065-0.652,2.083-1.388,3.09-2.128c0.429-0.315,1.328-0.88,1.328-0.88,s1.27-0.869,1.45-0.978c0.797-0.482,1.536-1.062,2.349-1.51C51.313,35.571,51.76,35.675,52.138,35.656z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M41.33,30.729c0,0.298-0.24,0.538-0.538,0.538l0,0,c-0.298,0-0.538-0.24-0.538-0.538v-1.746c0-0.297,0.24-0.537,0.538-0.537l0,0c0.298,0,0.538,0.24,0.538,0.537V30.729z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M36.993,31.224c0.11,0.275-0.023,0.588-0.3,0.698l0,0,c-0.276,0.11-0.59-0.023-0.7-0.299l-0.651-1.621c-0.111-0.276,0.023-0.588,0.3-0.699l0,0c0.276-0.11,0.589,0.023,0.7,0.299,L36.993,31.224z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M32.905,33.586c0.205,0.215,0.196,0.555-0.021,0.759l0,0,c-0.216,0.204-0.558,0.194-0.761-0.021l-1.203-1.269c-0.204-0.215-0.195-0.556,0.021-0.759l0,0,c0.216-0.204,0.557-0.194,0.762,0.021L32.905,33.586z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M30.143,36.979c0.277,0.109,0.413,0.421,0.303,0.697l0,0,c-0.108,0.275-0.421,0.411-0.698,0.302l-1.628-0.641c-0.277-0.108-0.413-0.421-0.304-0.696l0,0,c0.109-0.276,0.422-0.412,0.699-0.303L30.143,36.979z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M28.588,42.195c0.297-0.003,0.541,0.235,0.544,0.532l0,0,c0.002,0.296-0.236,0.54-0.533,0.542l-1.75,0.018c-0.297,0.003-0.541-0.234-0.543-0.531l0,0c-0.004-0.297,0.235-0.539,0.532-0.542,L28.588,42.195z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M29.088,46.524c0.276-0.112,0.589,0.022,0.7,0.299l0,0,c0.111,0.274-0.023,0.588-0.299,0.697l-1.625,0.65c-0.276,0.109-0.59-0.023-0.7-0.299l0,0c-0.111-0.276,0.023-0.588,0.299-0.699,L29.088,46.524z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M31.456,50.602c0.216-0.203,0.557-0.194,0.761,0.021l0,0,c0.205,0.216,0.194,0.556-0.021,0.761l-1.271,1.199c-0.216,0.203-0.557,0.194-0.761-0.021l0,0,c-0.204-0.216-0.195-0.557,0.021-0.761L31.456,50.602z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M34.857,53.357c0.108-0.275,0.422-0.412,0.698-0.305l0,0,c0.277,0.11,0.413,0.422,0.304,0.698l-0.642,1.626c-0.11,0.274-0.423,0.41-0.7,0.3l0,0c-0.277-0.107-0.413-0.42-0.303-0.694,L34.857,53.357z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M40.085,54.909c-0.003-0.296,0.235-0.54,0.533-0.543l0,0,c0.297-0.004,0.54,0.234,0.543,0.531l0.018,1.746c0.002,0.296-0.235,0.541-0.533,0.544l0,0c-0.297,0.003-0.542-0.236-0.543-0.533,L40.085,54.909z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M44.606,54.362c-0.112-0.274,0.023-0.588,0.3-0.696l0,0,c0.275-0.113,0.589,0.022,0.699,0.298l0.651,1.62c0.111,0.275-0.023,0.588-0.3,0.698l0,0c-0.275,0.111-0.59-0.022-0.699-0.297,L44.606,54.362z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M48.694,52c-0.206-0.215-0.196-0.554,0.021-0.759l0,0,c0.216-0.205,0.556-0.194,0.761,0.021l1.203,1.269c0.204,0.216,0.195,0.557-0.021,0.759l0,0c-0.216,0.205-0.557,0.197-0.762-0.021,L48.694,52z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M51.455,48.608c-0.276-0.11-0.411-0.422-0.303-0.698l0,0,c0.108-0.274,0.421-0.41,0.698-0.302l1.628,0.641c0.278,0.108,0.412,0.422,0.304,0.696l0,0c-0.109,0.277-0.421,0.412-0.698,0.303,L51.455,48.608z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M52.541,38.916c-0.277,0.111-0.589-0.023-0.701-0.299l0,0,c-0.109-0.275,0.023-0.588,0.301-0.698l1.623-0.65c0.277-0.11,0.591,0.023,0.701,0.298l0,0c0.11,0.276-0.023,0.589-0.301,0.699,L52.541,38.916z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M50.174,34.839c-0.217,0.204-0.558,0.194-0.762-0.021l0,0,c-0.205-0.216-0.195-0.556,0.021-0.76l1.272-1.2c0.215-0.203,0.556-0.194,0.761,0.021l0,0c0.203,0.216,0.193,0.556-0.021,0.76,L50.174,34.839z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M46.771,32.083c-0.109,0.276-0.422,0.412-0.699,0.303l0,0,c-0.275-0.108-0.411-0.421-0.303-0.697l0.644-1.625c0.108-0.276,0.422-0.412,0.697-0.302l0,0c0.278,0.108,0.413,0.42,0.304,0.696,L46.771,32.083z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M53.012,43.391c-0.298,0.004-0.542-0.235-0.544-0.532l0,0,c-0.003-0.295,0.235-0.538,0.532-0.541l1.75-0.017c0.298-0.005,0.541,0.234,0.544,0.53l0,0c0.003,0.297-0.235,0.539-0.533,0.542,L53.012,43.391z"/>
+						<path fill="none" stroke="#FFFFFF" stroke-width="2.9615" stroke-miterlimit="10" d="M78.5,40c0,21.264-17.236,38.5-38.5,38.5C18.737,78.5,1.5,61.264,1.5,40C1.5,18.737,18.737,1.5,40,1.5C61.264,1.5,78.5,18.737,78.5,40z"
+
+							  stroke-dasharray="250"
+							  stroke-dashoffset="250"
+							  data-bottom-top="@stroke-dashoffset[sqrt]: 240; opacity: 0"
+							  data-80p-top="@stroke-dashoffset[sqrt]: 0; opacity: 1"/>
+</svg>
+
+				</em>
 					Could they be more efficient though?<br/>Absolutely:</h4>
 				<p>
 					Nearly three-quarters of employers say it takes them more than 30 minutes to post a job to all the places they source candidates, 
