--- a/index.html
+++ b/index.html
@@ -528,30 +528,14 @@
 	</div>
 
 
-	<!-- begin my terrible mobile hack -->
-	<?php $subCat2 = array(
-						array("Select",),
-						array("Country", 0),
-						array("Gender", 1),
-						array("Generation", 2),
-						array("Employment Status", 3),
-						array("Education", 4),
-						array("Job Level", 5),
-						array("US Region", 6),
-						array("Industry", 7),
-						array("Job Type", 8),
-						array("Ethnicity", 9),
-						array("Salary", 10)
-					);	?>
 
 	<div id="numbersMobile">
 		<h2>Select Subcategory </h2>
 		<div>
 												<!-- delete '2' from subCat to remove terrible hack -->
-			<select id="subCatMobile" name="subCatMobile"> <?php foreach ($subCat2 as $vIndex => $v) {
-					    echo '<option value="'. $v[1] .'">' . $v[0] .'</option>';
-					} ?>
-			</select>
+			<select id="subCatMobile" name="subCatMobile">
+
+				<option value="">Select</option><option value="0">Country</option><option value="1">Gender</option><option value="2">Generation</option><option value="3">Employment Status</option><option value="4">Education</option><option value="5">Job Level</option><option value="6">US Region</option><option value="7">Industry</option><option value="8">Job Type</option><option value="9">Ethnicity</option><option value="10">Salary</option>			</select>
 		</div>
 
 		<h2>Select Research Category</h2>
@@ -1035,7 +1019,22 @@
 					data--30p-bottom="width:56%"></span><i>56%</i>
 				</div>
 
-				<?php  include '_/php/arrows.php' ?>
+				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="58px" viewBox="0 0 50 58" enable-background="new 0 0 50 58" xml:space="preserve"
+
+					 id="bArrow"
+					 data-bottom-top="transform: translateY(50px) "
+					 data-90p-top="transform: translateY(0x)"
+					 data-20p-top="transform: translateY(0px)"
+					 data-top-bottom="transform: translateY(-50px)">
+<g id="outline">
+	<path fill="#A6A8AB" d="M29.054,58c-2.923,0-5.3-2.382-5.3-5.309V18.128l-6.599,6.61c-1.001,1.003-2.333,1.555-3.748,1.555,c-1.415,0-2.746-0.552-3.748-1.555c-2.066-2.071-2.066-5.439,0-7.509L25.306,1.556C26.307,0.552,27.638,0,29.054,0,c1.415,0,2.747,0.552,3.747,1.556l15.646,15.674C49.448,18.232,50,19.565,50,20.984c0,1.418-0.551,2.751-1.553,3.754,c-1,1.002-2.33,1.555-3.748,1.555c-1.416,0-2.746-0.552-3.747-1.555l-6.599-6.61v34.563C34.354,55.618,31.977,58,29.054,58z"/>
+	<path fill="#A6A8AB" d="M10.562,54.135c-2.188,0-3.967-1.781-3.967-3.973v-8.653c-1.512,1.345-3.993,1.278-5.434-0.166,C0.413,40.593,0,39.595,0,38.533c0-1.062,0.413-2.061,1.163-2.811l6.595-6.607c1.503-1.501,4.114-1.5,5.61,0l6.596,6.607,c0.749,0.75,1.162,1.748,1.162,2.811c0,1.062-0.413,2.06-1.163,2.811c-1.439,1.442-3.92,1.51-5.433,0.165v8.653,C14.529,52.354,12.75,54.135,10.562,54.135z"/>
+</g>
+					<g id="arrows">
+	<path fill="#FFFFFF" d="M46.68,19L31.033,3.326c-1.094-1.096-2.866-1.096-3.96,0L11.427,19c-1.093,1.095-1.093,2.871,0,3.967,c1.094,1.096,2.867,1.095,3.96,0l10.867-10.885v40.609c0,1.549,1.253,2.805,2.8,2.805c1.546,0,2.8-1.256,2.8-2.805V12.082,L42.72,22.967c0.547,0.548,1.264,0.821,1.979,0.821c0.717,0,1.434-0.273,1.98-0.821C47.773,21.872,47.773,20.096,46.68,19z"/>
+						<path fill="#FFFFFF" d="M11.6,30.887c-0.275-0.275-0.648-0.431-1.037-0.431c-0.389,0-0.762,0.155-1.037,0.431L2.93,37.494,c-0.573,0.574-0.573,1.504,0,2.078c0.573,0.573,1.501,0.573,2.074,0l4.092-4.1v14.689c0,0.811,0.657,1.469,1.467,1.469,s1.467-0.658,1.467-1.469V35.473l4.092,4.1c0.287,0.286,0.662,0.43,1.037,0.43c0.375,0,0.751-0.144,1.037-0.43,c0.573-0.574,0.573-1.504,0-2.078L11.6,30.887z"/>
+</g>
+</svg>
 				
 			</div>
 			
@@ -1064,7 +1063,7 @@
 		data-center="background-position: 50% 30%;      left: 50%;"
 		data-top="background-position: 50% 30%;         left: 50%; opacity:1;"
 		data-top-bottom="background-position: 50% 0%;   left: 100%; opacity:0">
-			<div><em><?php include '_/php/RecruiterEfficiency.php' ?></em><span>Recruiter Efficiency</span></div>
+			<div><em><img src="_/img/RecruiterEfficiency.png"/></em><span>Recruiter Efficiency</span></div>
 				<p>Engaging candidates takes time and effort that clients do not often have, so we at CareerBuilder build our software tools to help clients do in just a few clicks what used to take hours to do manually. Because recruiter efficiency saves you time and money — and who doesn’t want to add time back in their day?
 			</p>	
 		</span>
@@ -1094,7 +1093,33 @@
 			data-90p-top="transform: translateY(0px); opacity: 1"
 			data-20p-top="transform: translateY(0px); opacity: 1"
 			data-top-bottom="transform: translateY(-20px); opacity:1">
-			<?php include '_/php/icon6_vol.php'; ?></em>
+
+				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="81px" height="81px" viewBox="0 0 81 81" enable-background="new 0 0 81 81" xml:space="preserve">
+
+	 <circle fill="#2D98BA" cx="40" cy="40" r="38.5"
+
+			 style="transform-origin: center center;"
+			 data-bottom-top="transform: scale(.2) "
+			 data-80p-top="transform: scale(1)"/>
+					<circle fill="#5DBEEC" cx="40" cy="40" r="26.654"
+
+							style="transform-origin: center center;"
+							data-bottom-top="transform: scale(.2) "
+							data-80p-top="transform: scale(1)"/>
+
+
+					<path fill-rule="evenodd" clip-rule="evenodd" fill="#2CADDA" d="M67.254,44.097l-9.557-9.557l-3.217,3.73L39.25,23.04,l-4.625,9.585l-3.25,4.5l-7.5,11.733l18.564,18.564C55.244,66.512,65.578,56.676,67.254,44.097z"/>
+
+					<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M39.25,23.04c0,12.007,0,23.917,0,35.905,c-0.148-0.137-0.25-0.225-0.344-0.317c-2.803-2.792-5.602-5.589-8.414-8.371c-0.147-0.145-0.409-0.243-0.619-0.247,c-1.043-0.027-2.087-0.006-3.131-0.013c-2.158-0.018-3.707-1.549-3.716-3.698c-0.012-2.923-0.002-5.847-0.002-8.771,c0-0.618-0.006-1.237,0.004-1.854c0.033-2.137,1.543-3.644,3.696-3.677c1-0.016,2.002-0.018,3.003,0.004,c0.365,0.008,0.624-0.094,0.885-0.357c2.743-2.753,5.499-5.492,8.251-8.234C38.969,23.301,39.082,23.2,39.25,23.04z"/>
+					<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M53.944,40.967c1.32,1.316,2.582,2.559,3.831,3.816,c0.835,0.843,0.72,2.135-0.232,2.782c-0.733,0.5-1.654,0.414-2.315-0.24c-1.152-1.138-2.296-2.282-3.44-3.427,c-0.109-0.108-0.203-0.232-0.327-0.378c-0.15,0.143-0.262,0.243-0.368,0.348c-1.167,1.162-2.327,2.331-3.503,3.485,c-0.652,0.64-1.592,0.704-2.32,0.193c-0.683-0.478-0.956-1.414-0.602-2.176c0.116-0.247,0.3-0.477,0.494-0.672,c1.218-1.23,2.447-2.447,3.694-3.688c-0.095-0.104-0.172-0.2-0.259-0.285c-1.153-1.153-2.308-2.309-3.468-3.456,c-0.537-0.531-0.746-1.157-0.532-1.882c0.392-1.322,2.005-1.712,3.021-0.724c1.189,1.158,2.356,2.341,3.532,3.511,c0.08,0.079,0.162,0.153,0.271,0.256c0.117-0.108,0.229-0.206,0.333-0.311c1.167-1.162,2.329-2.33,3.502-3.483,c0.567-0.559,1.341-0.683,2.029-0.365c0.668,0.308,1.09,1.001,1.044,1.734c-0.03,0.5-0.254,0.907-0.608,1.258,c-1.131,1.119-2.255,2.244-3.382,3.365C54.229,40.739,54.105,40.833,53.944,40.967z"/>
+					<path fill="none" stroke="#FFFFFF" stroke-width="2.9615" stroke-miterlimit="10" d="M78.5,40c0,21.264-17.236,38.5-38.5,38.5C18.737,78.5,1.5,61.264,1.5,40C1.5,18.737,18.737,1.5,40,1.5C61.264,1.5,78.5,18.737,78.5,40z"
+
+						  stroke-dasharray="250"
+						  stroke-dashoffset="250"
+						  data-bottom-top="@stroke-dashoffset[sqrt]: 240; opacity: 0"
+						  data-80p-top="@stroke-dashoffset[sqrt]: 0; opacity: 1"/>
+</svg>
+			</em>
 			<div>
 				<h4 data-bottom-top="transform: translateY(100px);"
 			    	data-80p-top="transform: translateY(0px);"
@@ -1126,7 +1151,29 @@
 					data-80p-top="transform: translateY(0px); opacity:1;"
 			    	data-20p-top="transform: translateY(0px); opacity:1;"
 					data-top-bottom="transform: translateY(-20px); opacity:1">
-					<?php include '_/php/icon7_phone.php'; ?></em>
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="81px" height="81px" viewBox="0 0 81 81" enable-background="new 0 0 81 81" xml:space="preserve">
+  <circle fill="#2D98BA" cx="40" cy="40" r="38.5"
+
+		  style="transform-origin: center center;"
+		  data-bottom-top="transform: scale(.2) "
+		  data-80p-top="transform: scale(1)"/>
+							<circle fill="#5DBEEC" cx="40" cy="40" r="26.654"
+
+									style="transform-origin: center center;"
+									data-bottom-top="transform: scale(.2) "
+									data-80p-top="transform: scale(1)"/>
+							<path fill="#2CADDA" d="M39.269,21.203L31,35.5l5.252,18.252l12.469,12.469c8.44-2.697,15.075-9.431,17.634-17.933L39.269,21.203z"/>
+
+							<path fill="#FFFFFF" d="M28.442,33.623c0.067,1.127,0.647,5.053,1.392,7.452c1.923,6.188,4.503,11.345,9.46,15.688,c3.051,2.677,6.275,4.506,10.388,3.112c2.237-0.759,3.587-2.083,4.979-4.43c0.352-0.59,0.135-1.058-0.412-1.508,c-2.202-1.812-4.384-3.651-6.53-5.529c-0.562-0.493-1.005-0.479-1.575-0.101c-0.86,0.566-1.74,1.105-2.622,1.638,c-1.092,0.66-2.058,0.471-2.832-0.52c-0.633-0.811-1.265-1.631-1.801-2.507c-1.902-3.099-3.338-6.4-4.036-9.986,c-0.377-1.937,0.015-2.575,1.878-3.217c0.862-0.297,1.77-0.468,2.611-0.808c0.327-0.132,0.746-0.566,0.756-0.874,c0.105-3.246,0.1-8.302,0.038-9.667c-0.083-1.806-3.021-1.474-4.272-1.049c-4.579,1.555-7.141,4.204-7.395,8.851,C28.451,30.498,28.376,32.497,28.442,33.623z"/>
+
+							<path fill="none" stroke="#FFFFFF" stroke-width="2.9615" stroke-miterlimit="10" d="M78.5,40c0,21.264-17.236,38.5-38.5,38.5C18.737,78.5,1.5,61.264,1.5,40C1.5,18.737,18.737,1.5,40,1.5C61.264,1.5,78.5,18.737,78.5,40z"
+
+								  stroke-dasharray="250"
+								  stroke-dashoffset="250"
+								  data-bottom-top="@stroke-dashoffset[sqrt]: 240; opacity: 0"
+								  data-80p-top="@stroke-dashoffset[sqrt]: 0; opacity: 1"/>
+</svg>
+					</em>
 					When it comes to the actual interview:</h4>
 				<p  data-bottom-top="transform: translateY(100px);"
 			    	data-80p-top="transform: translateY(0px);"
@@ -1174,7 +1221,39 @@
 					data-90p-top="transform: translateY(0px); opacity: 1"
 					data-20p-top="transform: translateY(0px); opacity: 1"
 					data-top-bottom="transform: translateY(-20px); opacity:1">
-					<?php include '_/php/icon8_think.php'; ?></em>
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="81px" height="81px" viewBox="0 0 81 81" enable-background="new 0 0 81 81" xml:space="preserve">
+  <circle fill="#2D98BA" cx="40" cy="40" r="38.5"
+
+		  style="transform-origin: center center;"
+		  data-bottom-top="transform: scale(.2) "
+		  data-80p-top="transform: scale(1)"/>
+							<circle fill="#5DBEEC" cx="40" cy="40" r="26.654"
+
+									style="transform-origin: center center;"
+									data-bottom-top="transform: scale(.2) "
+									data-80p-top="transform: scale(1)"/>
+							<path fill="#2CADDA" d="M64.993,51.858L41.438,28.304l-6.399,1.229l4.751,4.751l-0.807,0.608l-7.125-7.125L28.5,34.875l-1,11,l-5.17,3.664l5.961,5.961l0.12,4.303l6.823,7.18c1.703,0.337,3.463,0.518,5.265,0.518C51.35,67.5,60.703,61.094,64.993,51.858z"/>
+							<path fill="#2CADDA" d="M65.697,50.197c0.278-0.72,0.524-1.455,0.741-2.204l-25.591-25.59L39.75,24.25L65.697,50.197z"/>
+							<path fill="#2CADDA" d="M51.34,23.035l-5.248-5.248l-0.781,6.591l21.626,21.626c0.368-1.777,0.563-3.617,0.563-5.504,c0-2.301-0.29-4.535-0.832-6.667L53.963,21.127L51.34,23.035z"/>
+
+							<path opacity="0.2" fill="#FFFFFF" d="M57.17,29.062c0,0.5-0.548,0.904-1.224,0.904h-4.445c-0.675,0-1.223-0.404-1.223-0.904,v-0.181c0-0.5,0.548-0.904,1.223-0.904h4.445c0.676,0,1.224,0.405,1.224,0.904V29.062z"/>
+							<path fill="#FFFFFF" d="M41.726,29.062c0,0.5-0.548,0.904-1.223,0.904h-4.445c-0.676,0-1.224-0.404-1.224-0.904v-0.181,c0-0.5,0.548-0.904,1.224-0.904h4.445c0.675,0,1.223,0.405,1.223,0.904V29.062z"/>
+							<path fill="#FFFFFF" d="M46.092,17.787c0.498,0,0.903,0.549,0.903,1.225v4.452c0,0.676-0.405,1.225-0.903,1.225h-0.18,c-0.499,0-0.903-0.549-0.903-1.225v-4.452c0-0.676,0.404-1.225,0.903-1.225H46.092z"/>
+							<path opacity="0.6" fill="#FFFFFF" d="M46.092,33.254c0.498,0,0.903,0.548,0.903,1.226v4.451c0,0.676-0.405,1.225-0.903,1.225,h-0.18c-0.499,0-0.903-0.549-0.903-1.225v-4.451c0-0.677,0.404-1.226,0.903-1.226H46.092z"/>
+							<path opacity="0.4" fill="#FFFFFF" d="M53.835,36.944c-0.353,0.353-1.025,0.251-1.503-0.227l-3.144-3.148,c-0.479-0.479-0.579-1.152-0.227-1.505l0.127-0.128c0.353-0.353,1.026-0.251,1.504,0.227l3.144,3.148,c0.478,0.479,0.579,1.152,0.227,1.506L53.835,36.944z"/>
+							<path fill="#FFFFFF" d="M42.914,26.007c-0.353,0.353-1.025,0.251-1.503-0.227l-3.144-3.147c-0.478-0.479-0.579-1.152-0.226-1.506,L38.168,21c0.353-0.353,1.026-0.251,1.504,0.227l3.143,3.148c0.478,0.479,0.579,1.152,0.227,1.506L42.914,26.007z"/>
+							<path fill="#FFFFFF" d="M53.963,21.127c0.353,0.354,0.251,1.027-0.227,1.506l-3.144,3.147c-0.478,0.479-1.151,0.58-1.504,0.227,l-0.127-0.127c-0.353-0.354-0.252-1.027,0.227-1.506l3.144-3.148c0.478-0.479,1.15-0.58,1.503-0.227L53.963,21.127z"/>
+							<path opacity="0.8" fill="#FFFFFF" d="M43.042,32.063c0.353,0.353,0.251,1.027-0.227,1.506l-3.143,3.147,c-0.478,0.478-1.151,0.58-1.504,0.227l-0.127-0.127c-0.353-0.354-0.251-1.027,0.226-1.506l3.144-3.148,c0.478-0.479,1.15-0.58,1.503-0.227L43.042,32.063z"/>
+							<path fill="#FFFFFF" d="M46.002,43.067c-7.836,0-14.189-6.362-14.189-14.21c0-0.368,0.018-0.731,0.045-1.09,c-6.006,3.096-5.479,9.695-5.479,9.695v3.829l-4.05,8.334h4.05l0.674,3.83c0,0,0.9,1.803,0.675,2.703s0,5.181,3.374,5.181,c2.395,0,13.063,0,19.053,0V42.444C48.842,42.847,47.448,43.067,46.002,43.067z M30.886,42.013c-0.481,0-0.872-0.391-0.872-0.873,c0-0.481,0.39-0.873,0.872-0.873s0.872,0.392,0.872,0.873C31.758,41.622,31.368,42.013,30.886,42.013z"/>
+							<ellipse fill="#D9D9D9" cx="36.406" cy="48.722" rx="3.97" ry="3.976"/>
+							<path fill="none" stroke="#FFFFFF" stroke-width="2.9615" stroke-miterlimit="10" d="M78.5,40c0,21.264-17.236,38.5-38.5,38.5C18.737,78.5,1.5,61.264,1.5,40C1.5,18.737,18.737,1.5,40,1.5C61.264,1.5,78.5,18.737,78.5,40z"
+
+								  stroke-dasharray="250"
+								  stroke-dashoffset="250"
+								  data-bottom-top="@stroke-dashoffset[sqrt]: 240; opacity: 0"
+								  data-80p-top="@stroke-dashoffset[sqrt]: 0; opacity: 1"/>
+</svg>
+					</em>
 					When it comes to the post-interview process:</h4>
 				<p  data-bottom-top="transform: translateY(100px);"
 			    	data-80p-top="transform: translateY(0px);"
@@ -1257,7 +1336,35 @@
 			data-90p-top="transform: translateY(0px); opacity: 1"
 			data-20p-top="transform: translateY(0px); opacity: 1"
 			data-top-bottom="transform: translateY(-20px); opacity:1">
-				<?php include '_/php/icon9_speech.php'; ?></em>
+				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="81px" height="81px" viewBox="0 0 81 81" enable-background="new 0 0 81 81" xml:space="preserve">
+ <circle fill="#2D98BA" cx="40" cy="40" r="38.5"
+
+		 style="transform-origin: center center;"
+		 data-bottom-top="transform: scale(.2) "
+		 data-80p-top="transform: scale(1)"/>
+					<circle fill="#5DBEEC" cx="40" cy="40" r="26.654"
+
+							style="transform-origin: center center;"
+							data-bottom-top="transform: scale(.2) "
+							data-80p-top="transform: scale(1)"/>
+					<path fill-rule="evenodd" clip-rule="evenodd" fill="#2CADDA" d="M67.5,40.5c0-1.749-0.172-3.456-0.49-5.112l-4.446-4.447,L56.084,30L43,29.917l-3,1.025l-1.167,2.892l0.292,8.708L33.5,36.917l-9.583,1.917L19.334,54.77l10.617,10.593,c3.206,1.388,6.893,2.138,10.547,2.138C55.408,67.5,67.5,55.411,67.5,40.5z"/>
+
+					<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M64.197,34.17c0.008,0.247,0.008,0.368,0,0.754,c-0.045,1.933,0.088,3.883-0.129,5.796c-0.316,2.805-2.805,4.861-5.619,4.882c-2.023,0.017-4.043-0.01-6.066,0.019,c-0.332,0.004-0.707,0.117-0.988,0.3c-2.666,1.742-5.316,3.517-7.979,5.271c-1.15,0.758-2.552,0.261-2.721-1.02,c-0.06-0.454,0.116-1.021,0.369-1.421c0.667-1.052,1.434-2.039,2.213-3.119c-0.291-0.054-0.506-0.094-0.721-0.132,c-2.502-0.45-4.541-2.638-4.664-5.184c-0.095-2.003-0.019-3.801-0.019-5.802c0.06-0.48,0.142-0.729,0.235-1.031,c0.696-2.599,2.775-4.297,5.486-4.32c4.951-0.042,9.9-0.049,14.852,0.004c2.303,0.023,4.023,1.154,5.113,3.207,C63.65,32.542,64.188,33.923,64.197,34.17z M42.502,49.615c0.023,0.029,0.049,0.058,0.072,0.087,c0.156-0.101,0.314-0.196,0.469-0.299c2.617-1.734,5.23-3.477,7.861-5.192c0.264-0.174,0.621-0.278,0.936-0.282,c2.119-0.024,4.236-0.01,6.354-0.014c2.51-0.004,4.293-1.774,4.314-4.289c0.012-1.5,0.012-3-0.002-4.499,c-0.021-2.462-1.766-4.265-4.213-4.277c-4.857-0.024-9.717-0.018-14.574,0c-1.576,0.006-2.781,0.718-3.636,2.058,c-0.364,0.556-0.511,1.314-0.511,1.446c-0.003,1.725-0.028,3.45-0.031,5.174c-0.004,2.638,1.74,4.384,4.372,4.388,c0.861,0.002,1.721,0,2.699,0C45.195,45.879,43.85,47.747,42.502,49.615z"/>
+					<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M55.084,37.445c0.004,0.906-0.746,1.658-1.658,1.668,c-0.945,0.01-1.691-0.738-1.688-1.688c0.004-0.919,0.744-1.672,1.648-1.677C54.322,35.744,55.078,36.5,55.084,37.445z"/>
+					<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M45.504,37.421c0.006,0.957-0.729,1.7-1.678,1.693,c-0.924-0.008-1.643-0.732-1.646-1.664c-0.006-0.952,0.744-1.712,1.676-1.702C44.771,35.758,45.496,36.494,45.504,37.421z"/>
+					<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M46.957,37.442c-0.002-0.947,0.756-1.708,1.688-1.693,c0.914,0.013,1.643,0.758,1.646,1.681c0.002,0.951-0.744,1.696-1.689,1.684C47.682,39.102,46.961,38.369,46.957,37.442z"/>
+					<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M59.865,37.458c-0.012,0.938-0.785,1.681-1.727,1.655,c-0.912-0.024-1.637-0.782-1.625-1.7c0.012-0.913,0.762-1.662,1.67-1.665C59.109,35.744,59.877,36.523,59.865,37.458z"/>
+					<path fill="#FFFFFF" d="M34.966,43.29v-2.151c0,0,0.504-6.331-7.312-6.331s-8.32,4.938-8.32,4.938v14.811c0,0,11.094,0,12.984,0,s2.017-2.406,1.891-2.913c-0.125-0.505,0.378-1.518,0.378-1.518l0.378-2.153h2.269L34.966,43.29z M32.327,44.03,c-0.313,0-0.566-0.256-0.566-0.569c0-0.315,0.253-0.569,0.566-0.569s0.567,0.254,0.567,0.569,C32.895,43.774,32.64,44.03,32.327,44.03z"/>
+					<path fill="none" stroke="#FFFFFF" stroke-width="2.9615" stroke-miterlimit="10" d="M78.5,40c0,21.264-17.236,38.5-38.5,38.5C18.737,78.5,1.5,61.264,1.5,40C1.5,18.737,18.737,1.5,40,1.5C61.264,1.5,78.5,18.737,78.5,40z"
+
+						  stroke-dasharray="250"
+						  stroke-dashoffset="250"
+						  data-bottom-top="@stroke-dashoffset[sqrt]: 240; opacity: 0"
+						  data-80p-top="@stroke-dashoffset[sqrt]: 0; opacity: 1"/>
+</svg>
+
+
+			</em>
 			<div data-bottom-top="background-color: rgb(166,168,171)"
 			     data-center-top="background-color: rgb(96,97,99)"
 			     data-top-bottom="background-color: rgb(96,97,99)"  >
